# toshiba-mirror-scraper

./: .gitignore  README.md  a.py  buildSearchIndex.deno.js  pyproject.toml
dynabook_scraper/: assets.py  broken_links.py  common.py  content_details.py  contents.py  fix_markup.py  frontend.py  html.py  index.py  product_index.py  products.py  products_list.py  sitemap.py
dynabook_scraper/templates/: content.html  dlServiceWorker.js  eula.html  home.html  product.html
dynabook_scraper/templates/inc/: base.html  search_form.html  search_head.html
dynabook_scraper/utils/: common.py  json.py  paths.py  router.py  uvloop.py
