[project]
name = "dynabook-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "asgiref>=3.8.1",
    "async-cache>=1.1.1",
    "beautifulsoup4>=4.12.3",
    "duckduckgo-search>=7.2.0",
    "internetarchive>=5.0.5",
    "jinja2>=3.1.5",
    "jq>=1.8.0",
    "orjson>=3.10.13; implementation_name == 'cpython'",
    "playwright>=1.49.1",
    "sagemcom-api",
    "tqdm>=4.67.1",
    "uvloop>=0.21.0; implementation_name == 'cpython'",
]

[dependency-groups]
dev = [
    "flamegraph>=0.1",
    "ptipython>=1.0.1",
]

[project.scripts]
dynabook-scrape-products-list = "dynabook_scraper.products_list:cli_scrape_products_list"
dynabook-scrape-assets = "dynabook_scraper.assets:cli_scrape_assets"
dynabook-scrape-products-html = "dynabook_scraper.html:cli_scrape_products_html"
dynabook-parse-products-html = "dynabook_scraper.products:cli_parse_products_html"
dynabook-scrape-driver-contents = "dynabook_scraper.content_details:cli_scrape_driver_contents"
dynabook-scrape-kb-contents = "dynabook_scraper.content_details:cli_scrape_kb_contents"
dynabook-scrape-manuals-contents = "dynabook_scraper.content_details:cli_scrape_manuals_contents"
dynabook-scrape-content-links = "dynabook_scraper.content_details:cli_scrape_content_links"
dynabook-fix-markup = "dynabook_scraper.fix_markup:cli_fix_contents_markup"
dynabook-fix-markup-single = "dynabook_scraper.fix_markup:cli_fix_content_markup"
dynabook-download-contents = "dynabook_scraper.contents:cli_download_contents"
dynabook-download-content = "dynabook_scraper.contents:cli_download_content"
dynabook-download-broken-links = "dynabook_scraper.broken_links:cli_scrape_broken_links"
dynabook-gen-products-index = "dynabook_scraper.product_index:cli_gen_products_index"
dynabook-build-frontend = "dynabook_scraper.frontend:cli_build_frontend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]
include = [
    "**/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["dynabook_scraper"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.uv.sources]
sagemcom-api = { git = "https://github.com/djGrrr/python-sagemcom-api.git", rev = "master" }
